Fixed logo collision with search bar on small screens

--- a/blogile/src/app/modules/home/nav/search-bar/search-bar.component.scss
+++ b/blogile/src/app/modules/home/nav/search-bar/search-bar.component.scss
@@ -6,3 +6,8 @@ label{
     display: inline-block;
     line-height: 50px;
 }
+@media screen and (max-width: 600px) {
+    #nav-search-container {
+        width: 75%;
+    }
+}
